SigmaCodebackup3rdSep/objects/Inventory_Location_Product_History__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered_Quantity__c</fullName>
        <label>Delivered Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Inventory Location Product Historys</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Inventory Location Product Historys</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Location Product Historys</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Quantity__c</fullName>
        <formula>Received_Quantity__c - Delivered_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Location Product Historys (Parent Account)</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Historys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Products</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory Location Product Historys</relationshipLabel>
        <relationshipName>Inventory_Location_Product_Histor_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <label>Received Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returned_Quantity__c</fullName>
        <label>Returned Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory Location Product History</label>
    <nameField>
        <label>Inventory Location Product History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Location Product Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>